Bug 104114 - "Previous Page" & "Next Page" Standard Actions show wrong icons.
Summary: "Previous Page" & "Next Page" Standard Actions show wrong icons.
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: James Richard Tyrer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-18 07:02 UTC by James Richard Tyrer
Modified: 2005-12-13 04:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KDEClassic screenshot (38.64 KB, image/png)
2005-04-18 07:06 UTC, James Richard Tyrer
Details
Patch to change. (1.05 KB, patch)
2005-04-18 07:12 UTC, James Richard Tyrer
Details
Icons to fix the icon issue (25.78 KB, application/x-tbz)
2005-04-20 04:35 UTC, James Richard Tyrer
Details
The icon "next" (3.37 KB, image/png)
2005-04-20 04:41 UTC, James Richard Tyrer
Details
The icon "previous" (3.47 KB, image/png)
2005-04-20 04:44 UTC, James Richard Tyrer
Details
Version 1.01 of the icons (25.75 KB, application/x-tbz )
2005-05-30 12:59 UTC, James Richard Tyrer
Details
Version 20 of the patch (2.03 KB, patch)
2005-06-27 22:43 UTC, James Richard Tyrer
Details
Version 03 (1.55 KB, patch)
2005-08-16 15:31 UTC, James Richard Tyrer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James Richard Tyrer 2005-04-18 07:02:17 UTC
Version:            (using KDE KDE 3.4.0)
Installed from:    Compiled From Sources
Compiler:          GCC-3.4.3 
OS:                Linux

As shown in the attachment, the menu entries:

Previous Page
Next Page

have the wrong icons when using the KDE Standard Actions in KDELibs.

It appears that in the CrystalSVG icon theme that this was addressed by changing the icons.  That does not really address the issue since the icons:

previous
next

are needed for some other uses and if you use all 4 icons on the tool bar the user will be confused.  For example: if KPDF uses 6 icons on the toolbar, like XPDF, they won't all be different in the CrystalSVG icon style.

-- 
JRT
Comment 1 James Richard Tyrer 2005-04-18 07:06:37 UTC
Created attachment 10691 [details]
KDEClassic screenshot

Screenshot of the menu showing "Previous Page" & "Next Page".
Comment 2 James Richard Tyrer 2005-04-18 07:12:04 UTC
Created attachment 10692 [details]
Patch to change.

This patch changes the icon for: "Previous Page" to "Back" and the icon for:
"Next Page" to "Forward".  This fixes the problem with the bug.  However, the
CrystalSVG icons "previous" & "next" still need to be changed.
Comment 3 James Richard Tyrer 2005-04-20 04:35:31 UTC
Created attachment 10718 [details]
Icons to fix the icon issue

These are Marco Martin's icons.  Perhaps the small ones still need a little
work, but these are different icons for: "previous" & "next" in the CrystalSVG
style.	And, he made SVG icons.

-- 
JRT
Comment 4 James Richard Tyrer 2005-04-20 04:41:41 UTC
Created attachment 10719 [details]
The icon "next"
Comment 5 James Richard Tyrer 2005-04-20 04:44:30 UTC
Created attachment 10720 [details]
The icon "previous"
Comment 6 James Richard Tyrer 2005-04-20 15:42:49 UTC
Please read the patch, this is not an Artist issue.

-- 
JRT
Comment 7 James Richard Tyrer 2005-04-20 15:48:58 UTC
Changing back to KDELibs.

-- 
JRT
Comment 8 Carlos Woelz 2005-04-20 18:13:42 UTC
James, why this is not a kde-artists issue? They have been taking care of these issues. It seems to me that it is a kde-artists issue, in particular, judging if a new icon complies with the kde/crystal icon guidelines.

Also, I would like to add a comment about the icons you are suggesting:

KDE currenlty mixes the "forward / backward in history" icons, with "forward / next" "directional" icons. The usage all around KDE is not consistent, and I can think of many instances where the user may be confused.

Since there no standard, the applications start creating their own icons to make this difference clear. There are many different forward / next icons in KDE, and  we shouldn't add another one, we should try to make consistent use of what we have. Or in other words, why not use the action-1rightarrow or action-1leftarrow instead, for all "forward / next" "directional" icons and use the action-next/forward for"forward / backward in history"?
Comment 9 Carlos Woelz 2005-04-20 19:07:03 UTC
Correcting my confusing post:

I will be happy if you use the the action-1rightarrow or action-1leftarrow *or* the action-next/previous you are proposing for all "previous / next" "directional" actions and use the action-back/forward for "forward / backward in history" actions.

Then, we can check all KDE apps for conformance.

Just to make it clear: I agree with the solution you are proposing for this bug. Even more, I think we should include in this discussion if we should use the "arrow" icons *or* the "previous/next" icons for the directional actions, and try to check the conformance of the applications.
Comment 10 James Richard Tyrer 2005-05-30 00:57:42 UTC
I hate to be difficult, but the patch (second attachment) has not been applied yet and I believe that this patch is a KDELibs issue.

Yes, Icons need to be changed, but applying the patch needs to be done *first*.
Comment 11 James Richard Tyrer 2005-05-30 12:59:26 UTC
Created attachment 11262 [details]
Version 1.01 of the icons

Tweaked version of the icons.
Comment 12 James Richard Tyrer 2005-06-27 22:43:55 UTC
Created attachment 11608 [details]
Version 20 of the patch

Patch modified to include the use of these icons in:

kdelibs/kdeui/kstdaction.cpp
Comment 13 James Richard Tyrer 2005-08-16 15:31:32 UTC
Created attachment 12234 [details]
Version 03

Must have been having bad day ;-(

I think that this one is correct.
Comment 14 James Richard Tyrer 2005-08-16 17:23:12 UTC
I have this fixed so I am reassigning it to myself.

Will commit to 3.5.
Comment 15 James Richard Tyrer 2005-12-13 04:51:26 UTC
Patch committed to 3.5 BRANCH