BUG:104114

In KDE Standard Actions:
     The icon for "Previous Page" is changed to "back".
     The icon for "Next Page" is changed to "forward".

This is done because changing the names of the icons would break a lot of stuff.

svn path=/branches/KDE/3.5/kdelibs/; revision=488072